istio/egress-ssl/egress-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-https
  namespace: istio-system
spec:
  hosts:
  - 192.168.0.59.sslip.io
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
